5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1646_2729.log
== TEST (2019-04-09 16:59:57) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
par = a + b
impar = a - b
if (a*b == par):
	print(par)
else: 
	print(impar)
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 17:00:06) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
par = a + b
impar = a - b
if (a*b == par):
	print(par)
else: 
	print(impar)
-- EXECUTION TIME:
0.151484
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
-1
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:38:00) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
if (a*b % 2 == 0):
	print(par)
else: 
	print(impar)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(par)
NameError: name 'par' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:38:54) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
if (a*b % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 23:39:20) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
if ((a*b) % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 23:39:32) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
if ((a*b) % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- EXECUTION TIME:
0.145605
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:14:48) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:15:18) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:15:29) 
-- CODE:
a = int(input("Digite: "))
b = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(a + b)
else: 
	print(a - b)
-- EXECUTION TIME:
0.136847
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:16:26) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:16:53) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:18:21) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:18:28) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- EXECUTION TIME:
0.166559
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:18:47) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- OUTPUT:
19
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:19:08) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a)
else: 
	print(b - a)
-- EXECUTION TIME:
0.163098
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
19
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 23:19:29) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a + p)
else: 
	print(b - a)
-- OUTPUT:
109
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 23:19:40) 
-- CODE:
b = int(input("Digite: "))
a = int(input("Digite: "))
p = a*b
if (p % 2 == 0):
	print(b + a + p)
else: 
	print(b - a)
-- EXECUTION TIME:
0.152955
-- TEST CASE 1:
---- input:
9
10
---- correct output:
19
---- user output:
109
-- TEST CASE 2:
---- input:
3
7
---- correct output:
4
---- user output:
-4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
